--- a/install-ntp.yml
+++ b/install-ntp.yml
@@ -1,4 +1,3 @@
----
 - name: configurando NTP
   hosts: host1.demo.com
   tasks:
@@ -12,3 +11,20 @@
           name: chronyd
           state: started
           enabled: yes
+
+      - name: configurando plantilla de chrony
+        template:
+          src: chrony.j2
+          dest: /etc/chrony.conf
+          owner: root
+          group: root
+          mode: 0644
+          backup: yes
+
+      - name: reiniciando servicio chronyd
+        service:
+          name: chronyd
+          state: restarted
+
+      - name: validando estatus chrnonyd
+        command: 'chronyc tracking
